<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_sheet_dialog_bg">

    <View
        android:layout_width="25dp"
        android:layout_height="2dp"
        android:layout_margin="15dp"
        android:background="@color/gray_light_dividing_line"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_selection"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_current_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_ringtone"
            android:textColor="@color/gray_time_length"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/tv_currentRingtone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/test"
            android:maxEms="8"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="@color/green_set_value"/>

        <ImageView
            android:id="@+id/iv_display"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/pause"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_system_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_ringtone"
        android:textSize="20sp"
        android:textColor="@color/gray_time_length"
        android:gravity="center"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light_dividing_line"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/tv_local_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_ringtone"
        android:textSize="20sp"
        android:textColor="@color/gray_time_length"
        android:gravity="center"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light_dividing_line"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/tv_no_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_ringtone"
        android:textSize="20sp"
        android:textColor="@color/gray_time_length"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"/>

</androidx.appcompat.widget.LinearLayoutCompat>